--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
 }
 
 .title {
-    font-size: 3vh !important;
+    font-size: 10px !important;
 }
 
 button.disabled {
@@ -72,25 +72,25 @@ button.disabled {
 }
 
 .action-button.small {
-    font-size: 2vh;
-    padding: 0.25vh;
+    font-size: 18.75px;
+    padding: 2.34375px;
     border-width: 3px;
     box-shadow: 0 4px rgb(45, 19, 137);
 }
 
 .action-button {
-    padding: 0.5vh;
+    padding: 4.6875px;
     font-weight: 600;
     transition-duration: 0.12s;
-    font-size: 2vh;
+    font-size: 18.75px;
     color: #000000;
     border: none;
     background: rgb(103, 72, 218);
     box-sizing: border-box;
     border: 4px outset rgb(73, 32, 221);
     box-shadow: 0 4px rgb(45, 19, 137);
-    margin-top: 0.25vh;
-    margin-bottom: 1.25vh;
+    margin-top: 2.34375px;
+    margin-bottom: 11.71875px;
 }
 
 .action-button.light {
@@ -135,9 +135,9 @@ button.disabled {
     text-align: center;
     font-size: x-large;
     font-weight: 600;
-    width: calc(100% - 2vh - 16px);
+    width: calc(100% - 18.75px - 16px);
     background: rgba(0, 0, 0, 0.14);
-    padding: 1vh;
+    padding: 9.375px;
 }
 
 .info.dark {
@@ -169,17 +169,18 @@ body {
     padding: 4px;
     margin-top: 16px;
     width: 500px;
+    height:760px;
 }
 
 #header {
     width: 500px;
-    height: 6vh;
+    height: 56.25px;
 }
 
 .bar {
     position: relative;
     width: 100%;
-    height: 4vh;
+    height: 37.5px;
     border: 6px double #3e3f4d;
     box-sizing: border-box;
     border-style: groove;
